# hello

./: .gitignore  README.rst  pyproject.toml
docs/: conf.py  index.rst
docs/notebooks/: quickstart.ipynb
docs/source/: about_us.rst  api.rst  installation.rst
docs/source/modules/: register.rst  utils.rst
src/hello/: __init__.py  _version.py  cli.py  register.py  utils.py
src/hello/data/: reference.yml
