[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project.urls]
"Hompage" = "https://github.com/ale94mleon/tutorial"
"Discussions" = "https://github.com/ale94mleon/tutorial/discussions"
"Documentation" = "https://tutorial.readthedocs.io/en/latest/"
"Issues" = "https://github.com/ale94mleon/tutorial/issues"

[project]
name = "hello"
dynamic = ["version"]
description = "A small tutorial."
readme = "README.rst"

authors=[
    {name="Alejandro Martínez-León", email="ale94mleon@gmail.com"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache License 2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
keywords = [
    "science",
    "chemistry",
    "biology",
    "drug-design"
]

requires-python = ">= 3.8 , < 3.11"
dependencies = [
    "pyyaml",
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/hello/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hello = [
    "LICENSE",
    "data/*yml"
]

[project.scripts]
say_hi = "hello.cli:say_hi"